Добавляет страницу с ошибкой для несуществующих маршрутов и loader при загрузук страницы

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
     "Тест": "Test",
     "Перевод": "Translate",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Главная": "Main page",
+    "О сайте": "About page",
+    "Страница не найдена": "Page not found"
 }
