--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
     "Тест": "Тест",
     "Перевод": "Перевод",
-    "Язык": "English"
+    "Язык": "English",
+    "Главная": "Главная",
+    "О сайте": "О сайте",
+    "Страница не найдена": "Страница не найдена"
 }
